--- a/source/sass/components/gallery.scss
+++ b/source/sass/components/gallery.scss
@@ -13,44 +13,6 @@
   }
 }
 
-.gallery__description {
-  @media (min-width: $desktop-width) {
-    padding-left: 370px;
-    padding-right: 372px;
-    text-align: center;
-  }
-}
-
-.gallery__title {
-  margin-bottom: 20px;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 26px;
-  text-transform: uppercase;
-  text-align: center;
-
-  @media (min-width: $tablet-width) {
-    font-size: 21px;
-    line-height: 26px;
-  }
-
-  @media (min-width: $desktop-width) {
-    font-size: 30px;
-    line-height: 26px;
-  }
-}
-
-.gallery__text {
-  margin-bottom: 43px;
-
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 24px;
-  text-transform: uppercase;
-
-  color: $darkGray;
-}
-
 .gallery__list {
   display: grid;
 
@@ -64,19 +26,18 @@
 }
 
 .gallery__item {
-  // border: 1px solid $black;
   margin-bottom: 22px;
 
   position: relative;
 
   &::before {
     content: "";
-    width: 320px;
+    width: 100%;
     height: 1px;
     background-color: $gray5;
     position: absolute;
     top: -22px;
-    left: -20px;
+    left: 0;
 
     @media (min-width: $tablet-width) {
       display: none;
@@ -101,12 +62,12 @@
 .gallery__item--4 {
   &::after {
     content: "";
-    width: 320px;
+    width: 100%;
     height: 1px;
     background-color: $gray5;
     position: absolute;
     bottom: 0;
-    left: -20px;
+    left: 0;
 
     @media (min-width: $tablet-width) {
       display: none;
