--- a/source/sass/components/social.scss
+++ b/source/sass/components/social.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
+  justify-content: center;
 }
 
 .social__item {
@@ -16,5 +17,4 @@
   position: relative;
 
   background-color: $blue;
-
 }
