--- a/source/sass/components/user-opinion.scss
+++ b/source/sass/components/user-opinion.scss
@@ -11,7 +11,7 @@
 .user-opinion__label {
   padding-left: 68px;
 
-  font-weight: 700px;
+  font-weight: 700;
   font-size: 18px;
   line-height: 26px;
 
