--- a/source/sass/components/video.scss
+++ b/source/sass/components/video.scss
@@ -51,10 +51,26 @@
 
   @media (min-width: $desktop-width) {
     padding-left: 200px;
-    padding-right: 20px;
+    padding-right: 200px;
   }
 }
 
 .video__img {
   display: block;
+  width: 100%;
+}
+
+.video__toolbar {
+  padding-left: 20px;
+  padding-right: 20px;
+
+  @media (min-width: $tablet-width) {
+    padding-left: 60px;
+    padding-right: 60px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-left: 200px;
+    padding-right: 200px;
+  }
 }
