--- a/source/sass/utils/variables.scss
+++ b/source/sass/utils/variables.scss
@@ -20,6 +20,8 @@ $gray2: #dbdbdb;
 $gray3: #e6e6e6;
 $gray4: #d6d6d6;
 $gray5: #e5e5e5;
+$gray6: #e7e5e5;
 
 $black-opacity: rgba(1, 1, 1, 0.2);
 $white-opacity: rgba(255, 255, 255, 0.2);
+$modal-shadow: rgba(0, 1, 1, 0.15);
