--- a/source/sass/components/reason-card.scss
+++ b/source/sass/components/reason-card.scss
@@ -92,7 +92,6 @@
   @media (min-width: $tablet-width) {
     padding-left: 15px;
     padding-right: 20px;
-
   }
 }
 
@@ -125,4 +124,5 @@
 .reason-card__img {
   display: block;
   width: 100%;
+  height: 100%;
 }
