--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -10,9 +10,11 @@
 @import "components/brief-reasons.scss";
 @import "components/benefits.scss";
 @import "components/button.scss";
+@import "components/copyright.scss";
 @import "components/gallery.scss";
 @import "components/gallery-card.scss";
 @import "components/intro.scss";
+@import "components/logo.scss";
 @import "components/main-nav.scss";
 @import "components/map.scss";
 @import "components/modal.scss";
