--- a/source/sass/components/gallery-card.scss
+++ b/source/sass/components/gallery-card.scss
@@ -21,6 +21,16 @@
     padding-right: 20px;
     padding-top: 22px;
   }
+
+  @media (min-width: $desktop-width) {
+    background-color: $black-opacity3;
+    color: $white;
+
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+  }
 }
 
 .gallery-card__title {
@@ -46,6 +56,10 @@
   font-size: 14px;
   line-height: 24px;
   color: $darkGray;
+
+  @media (min-width: $desktop-width) {
+    color: $white;
+  }
 }
 
 .gallery-card__number {
@@ -57,5 +71,17 @@
 .gallery-card__likes {
   @media (min-width: $tablet-width) {
     padding-top: 28px;
+  }
+}
+
+.gallery-card__button {
+  @include btn-reset;
+}
+
+.gallery-card__icon {
+  color: $black-opacity3;
+
+  @media (min-width: $desktop-width) {
+    color: $white;
   }
 }
