--- a/source/sass/components/intro.scss
+++ b/source/sass/components/intro.scss
@@ -1,55 +1,54 @@
 .intro {
   margin-bottom: 40px;
+  overflow: hidden;
+  position: relative;
+
+  &::after {
+    content: "";
+    width: 100%;
+    height: 57px;
+    margin: 0 auto;
+
+    position: absolute;
+    top: 101px;
+    left: 0;
+    right: 0;
+
+    background-image: url("../img/intro-triangle-desktop.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: bottom center;
+
+    @media (min-width: $tablet-width) {
+      top: 233px;
+    }
+
+    @media (min-width: $desktop-width) {
+      top: 244px;
+    }
+  }
 }
 
 .intro__inner {
-  overflow: hidden;
-  position: relative;
   min-height: 158px;
   background-color: $blue-hover;
-  background-image: url("../../img/back-intro-mobile.jpg");
+  background-image: url("../img/back-intro-mobile.jpg");
   background-size: 100%;
   background-repeat: no-repeat;
 
   @media (min-resolution: 2dppx) {
-    background-image: url("../../img/back-intro-mobile@2x.jpg");
+    background-image: url("../img/back-intro-mobile@2x.jpg");
     background-size: 320px;
-  }
-
-  &::after {
-    content: "";
-    width: 1200px;
-    height: 57px;
-
-    position: absolute;
-    bottom: 0;
-    left: 0;
-
-    background-image: url("../../img/intro-triangle.svg");
-    background-size: 100%;
-    background-repeat: no-repeat;
-
-    @media (min-width: $tablet-width) {
-      background-image: url("../../img/intro-triangle-tablet.svg");
-      bottom: 0;
-      left: 0;
-    }
-
-    @media (min-width: $desktop-width) {
-      background-image: url("../../img/intro-triangle-desktop.svg");
-      bottom: 0;
-      left: 0;
-    }
   }
 
   @media (min-width: $tablet-width) {
     min-height: 290px;
-    background-image: url("../../img/back-intro-tablet.jpg");
+    background-image: url("../img/back-intro-tablet.jpg");
     background-size: 100%;
     background-repeat: no-repeat;
 
     @media (min-resolution: 2dppx) {
-      background-image: url("../../img/back-intro-tablet@2x.jpg");
+      background-image: url("../img/back-intro-tablet@2x.jpg");
       background-size: 758px;
     }
   }
@@ -58,12 +57,12 @@
     min-height: 301px;
     width: 100%;
 
-    background-image: url("../../img/back-intro-desktop.jpg");
+    background-image: url("../img/back-intro-desktop.jpg");
     background-repeat: no-repeat;
     background-size: 1200px;
 
     @media (min-resolution: 2dppx) {
-      background-image: url("../../img/back-intro-desktop@2x.jpg");
+      background-image: url("../img/back-intro-desktop@2x.jpg");
       background-size: 1200px;
     }
   }
