--- a/source/sass/components/main-nav.scss
+++ b/source/sass/components/main-nav.scss
@@ -1,6 +1,5 @@
 .main-nav {
   width: 100%;
-  background-color: $blue;
 
   position: relative;
   top: 56px;
@@ -12,22 +11,54 @@
 
 
 .main-nav__list {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  width: 100%;
+  text-align: center;
+  // background-color: $blue;
+
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 3;
+
 
   @media (min-width: $tablet-width) {
     min-height: 56px;
     background-color: $white;
 
-    flex-direction: row;
-    flex-wrap: nowrap;
+    display: grid;
+    grid-template-columns: 153px 153px 156px 153px 153px;
+  }
+
+  @media (min-width: $desktop-width) {
+    min-height: 59px;
+    grid-template-columns: 239px 239px 244px 239px 239px;
   }
 }
 
 .main-nav__item {
   width: 100%;
   min-height: 55px;
+  background-color: $blue;
+
+  &:hover {
+    background-color: $blue-hover;
+  }
+
+  &:active {
+    background-color: $blue-active;
+  }
+
+  @media (min-width: $tablet-width) {
+    background-color: $white;
+  }
+}
+
+.main-nav__item--special {
+  display: none;
+
+  @media (min-width: $tablet-width) {
+    display: block;
+  }
 }
 
 .main-nav__link {
@@ -39,18 +70,28 @@
   text-transform: uppercase;
   text-align: center;
 
-  &:active {
-    opacity: 0.3;
-  }
-
   @media (min-width: $tablet-width) {
     color: $black;
+
+    &:hover {
+      color: $blue;
+    }
+
+    &:active {
+      color: $black-opacity3;
+    }
   }
 }
 
 .main-nav__link--current {
   @media (min-width: $tablet-width) {
     color: $brown;
+  }
+}
+
+.main-nav__item .main-nav__link {
+  &:active {
+    color: $white-opacity3;
   }
 }
 
