--- a/source/sass/components/promo.scss
+++ b/source/sass/components/promo.scss
@@ -1,41 +1,46 @@
-.promo__inner {
+.promo {
   overflow: hidden;
   position: relative;
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: 332px;
+    left: 0;
+    right: 0;
+
+    width: 100%;
+    height: 57px;
+    margin: 0 auto;
+
+    background-image: url("../img/intro-triangle-desktop.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: bottom center;
+
+    @media (min-width: $tablet-width) {
+      top: 488px;
+    }
+
+    @media (min-width: $desktop-width) {
+      top: 461px;
+    }
+  }
+}
+
+.promo__inner {
+  position: relative;
+  min-width: 320px;
   min-height: 389px;
   width: 100%;
   background-color: $blue-hover;
   background-image: url("../img/back-mobile.jpg");
-  background-size: 100%;
+  background-size: cover;
   background-repeat: no-repeat;
 
   @media (min-resolution: 2dppx) {
     background-image: url("../img/back-mobile@2x.jpg");
     background-repeat: no-repeat;
-  }
-
-  &::after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 0;
-
-    width: 1201px;
-    height: 57px;
-
-    background-image: url("../img/intro-triangle-tablet.svg");
-    background-repeat: no-repeat;
-
-    @media (min-width: $tablet-width) {
-      background-image: url("../img/intro-triangle-tablet.svg");
-      bottom: 0;
-      left: 0;
-    }
-
-    @media (min-width: $desktop-width) {
-      background-image: url("../img/intro-triangle-desktop.svg");
-      bottom: 0;
-      left: 0;
-    }
   }
 
   @media (min-width: $tablet-width) {
@@ -70,7 +75,7 @@
 
   @media (min-width: $tablet-width) {
     padding-top: 50px;
-    padding-left: 150px;
+    padding-left: 60px;
     padding-right: 60px;
   }
 
