--- a/source/sass/components/reasons.scss
+++ b/source/sass/components/reasons.scss
@@ -1,28 +1,22 @@
-// .reasons__benefits {
-//   min-height: 416px;
-//   border: 1px solid $blue;
-//   display: grid;
-
-//   @media (min-width: $tablet-width) {
-//     min-height: 330px;
-//     grid-template-columns: 1fr 1fr 1fr;
-//   }
-// }
-
-.reasons__item--first {
-  position: relative;
+.reasons {
   overflow: hidden;
+  position: relative;
 
   &::before {
     content: "";
-    width: 100%;
-    height: 37px;
-
     position: absolute;
     top: 0;
     left: 0;
-    background-image: url("../../img/white-plank-mobile.svg");
+    right: 0;
+
+    width: 100%;
+    height: 37px;
+    margin: 0 auto;
+
+    background-image: url("../img/white-copy.svg");
     background-repeat: no-repeat;
+    background-size: cover;
+    background-position: bottom center;
 
     @media (min-width: $tablet-width) {
       display: none;
