--- a/source/sass/components/toolbar.scss
+++ b/source/sass/components/toolbar.scss
@@ -4,6 +4,12 @@
   position: absolute;
   bottom: -66px;
   left: 0;
+
+  @media (min-width: $tablet-width) {
+    height: 93px;
+    position: absolute;
+    bottom: 0;
+  }
 }
 
 .toolbar__timeline {
@@ -13,6 +19,11 @@
   opacity: 60%;
 
   position: relative;
+
+  @media (min-width: $tablet-width) {
+    min-height: 93px;
+    padding-top: 45px;
+  }
 }
 
 .toolbar__time-scale {
@@ -30,6 +41,7 @@
     width: 389px;
 
     left: 93px;
+    top: 45px;
   }
 
   @media (min-width: $desktop-width) {
@@ -50,6 +62,7 @@
 
   @media (min-width: $tablet-width) {
     left: 204px;
+    top: 40px;
   }
 
   @media (min-width: $desktop-width) {
@@ -61,4 +74,9 @@
   min-height: 66px;
   min-width: 280px;
   background-color: $lightGray;
+
+  @media (min-width: $tablet-width) {
+    background-color: $black;
+    min-height: 0;
+  }
 }
