--- a/source/sass/layout/page-footer.scss
+++ b/source/sass/layout/page-footer.scss
@@ -17,6 +17,8 @@
     padding-left: 45px;
     padding-right: 60px;
     padding-top: 38px;
+    display: flex;
+    justify-content: space-between;
     flex-direction: row;
   }
 
@@ -43,7 +45,6 @@
 }
 
 .page-footer__copyright {
-  padding-left: 60px;
 
   font-weight: 400;
   font-size: 14px;
@@ -52,6 +53,7 @@
   text-align: center;
 
   display: flex;
+  justify-content: center;
 
   @media (min-width: $tablet-width) {
     padding-left: 0;
