--- a/source/sass/utils/variables.scss
+++ b/source/sass/utils/variables.scss
@@ -21,7 +21,11 @@ $gray3: #e6e6e6;
 $gray4: #d6d6d6;
 $gray5: #e5e5e5;
 $gray6: #e7e5e5;
+$special-gray: #5c6870;
 
 $black-opacity: rgba(1, 1, 1, 0.2);
+$black-opacity3: rgba(1, 1, 1, 0.3);
 $white-opacity: rgba(255, 255, 255, 0.2);
+$white-opacity3: rgba(255, 255, 255, 0.3);
+$white-opacity6: rgba(255, 255, 255, 0.6);
 $modal-shadow: rgba(0, 1, 1, 0.15);
