Внесение правок в навигацию

--- a/source/sass/components/user-visited.scss
+++ b/source/sass/components/user-visited.scss
@@ -58,7 +58,7 @@
     width: 23px;
     height: 16px;
 
-    background-image: url("../../img/icon-tick.svg");
+    background-image: url("../img/icon-tick.svg");
     background-repeat: no-repeat;
   }
 }
