--- a/source/sass/components/main-nav.scss
+++ b/source/sass/components/main-nav.scss
@@ -35,10 +35,29 @@
   }
 }
 
+// .main-nav__item {
+//   width: 100%;
+//   min-height: 55px;
+//   background-color: $blue;
+
+//   &:hover {
+//     background-color: $blue-hover;
+//   }
+
+//   &:active {
+//     background-color: $blue-active;
+//   }
+
+//   @media (min-width: $tablet-width) {
+//     background-color: $white;
+//   }
+// }
+
 .main-nav__item {
   width: 100%;
   min-height: 55px;
   background-color: $blue;
+
 
   &:hover {
     background-color: $blue-hover;
@@ -50,6 +69,10 @@
 
   @media (min-width: $tablet-width) {
     background-color: $white;
+
+    &:hover {
+      background-color: $white;
+    }
   }
 }
 
@@ -78,7 +101,8 @@
     }
 
     &:active {
-      color: $black-opacity3;
+      color: $black;
+      opacity: 30%;
     }
   }
 }
@@ -91,7 +115,8 @@
 
 .main-nav__item .main-nav__link {
   &:active {
-    color: $white-opacity3;
+    color: $black;
+    opacity: 30%;
   }
 }
 
