--- a/source/sass/components/user-info.scss
+++ b/source/sass/components/user-info.scss
@@ -29,6 +29,7 @@
   padding-top: 18px;
   padding-bottom: 14px;
   padding-left: 21px;
+  cursor: pointer;
 
   border: none;
 
@@ -43,6 +44,15 @@
   &::placeholder {
     color: $black;
     opacity: 1;
+  }
+
+  &:hover {
+    background-color: $gray5;
+  }
+
+  &:active {
+    background-color: $white;
+    border: 4px solid $gray5;
   }
 
   @media (min-width: $tablet-width) {
