--- a/source/sass/components/user-opinion.scss
+++ b/source/sass/components/user-opinion.scss
@@ -8,7 +8,74 @@
   margin-bottom: 43px;
 }
 
-.user-opinion__label {
+// .user-opinion__label {
+//   padding-left: 68px;
+
+//   font-weight: 700;
+//   font-size: 18px;
+//   line-height: 26px;
+
+//   color: $black;
+
+//   cursor: pointer;
+
+//   position: relative;
+
+//   &::before {
+//     content: "";
+//     position: absolute;
+//     top: -10px;
+//     left: 0;
+
+//     width: 48px;
+//     height: 48px;
+//     border-radius: 50%;
+
+//     background-color: $lightGray;
+//   }
+
+//   &::after {
+//     content: "";
+//     position: absolute;
+//     top: 4px;
+//     left: 15px;
+
+//     width: 18px;
+//     height: 18px;
+//     border-radius: 50%;
+
+//     background-color: $darkGray;
+//   }
+// }
+
+
+// .user-opinion__input + .user-opinion__label::before {
+//   content: "";
+//   position: absolute;
+//   top: -10px;
+//   left: 0;
+
+//   width: 48px;
+//   height: 48px;
+//   border-radius: 50%;
+
+//   background-color: $lightGray;
+// }
+
+// .user-opinion__input:checked + .user-opinion__label::after {
+//   content: "";
+//   position: absolute;
+//   top: 4px;
+//   left: 15px;
+
+//   width: 18px;
+//   height: 18px;
+//   border-radius: 50%;
+
+//   background-color: $darkGray;
+// }
+
+.user-opinion__label span {
   padding-left: 68px;
 
   font-weight: 700;
@@ -33,7 +100,9 @@
 
     background-color: $lightGray;
   }
+}
 
+ .user-opinion__label span {
   &::after {
     content: "";
     position: absolute;
@@ -48,21 +117,7 @@
   }
 }
 
-
-.user-opinion__input + .user-opinion__label::before {
-  content: "";
-  position: absolute;
-  top: -10px;
-  left: 0;
-
-  width: 48px;
-  height: 48px;
-  border-radius: 50%;
-
-  background-color: $lightGray;
-}
-
-.user-opinion__input:checked + .user-opinion__label::after {
+.user-opinion__input:checked + .user-opinion__label span::after {
   content: "";
   position: absolute;
   top: 4px;
