--- a/source/sass/components/brief-reasons.scss
+++ b/source/sass/components/brief-reasons.scss
@@ -3,4 +3,8 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
   }
+
+  @media (min-width: $desktop-width) {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 }
