--- a/source/sass/utils/variables.scss
+++ b/source/sass/utils/variables.scss
@@ -21,6 +21,7 @@ $gray3: #e6e6e6;
 $gray4: #d6d6d6;
 $gray5: #e5e5e5;
 $gray6: #e7e5e5;
+$gray7: #d5d5d5;
 $special-gray: #5c6870;
 
 $black-opacity: rgba(1, 1, 1, 0.2);
