--- a/source/sass/components/copyright.scss
+++ b/source/sass/components/copyright.scss
@@ -1,5 +1,10 @@
 .copyright__text {
   padding-right: 5px;
+
+  @media (min-width: $tablet-width) {
+    padding-left: 10px;
+    padding-right: 13px;
+  }
 }
 
 .copyright__link {
