--- a/source/sass/components/offers.scss
+++ b/source/sass/components/offers.scss
@@ -23,6 +23,11 @@
   line-height: 26px;
   text-align: center;
   text-transform: uppercase;
+
+  @media (min-width: $tablet-width) {
+    font-size: 30px;
+    line-height: 26px;
+  }
 }
 
 .offers__text {
@@ -38,6 +43,20 @@
   text-transform: uppercase;
 
   color: $darkGray;
+
+  @media (min-width: $tablet-width) {
+    padding-left: 5px;
+    padding-right: 5px;
+    margin-bottom: 44px;
+    padding-top: 7px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-left: 30px;
+    padding-right: 20px;
+    padding-top: 8px;
+    margin-bottom: 48px;
+  }
 }
 
 .offers__button {
