--- a/source/sass/components/reason-card.scss
+++ b/source/sass/components/reason-card.scss
@@ -5,7 +5,12 @@
   grid-template: column;
 
   @media (min-width: $tablet-width) {
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 256px 512px;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-template-columns: 400px 800px;
+    height: 256px;
   }
 }
 
@@ -64,36 +69,91 @@
     padding-right: 32px;
     padding-bottom: 44px;
     padding-left: 32px;
+    width: 256px;
+    min-height: 256px;
   }
 
   @media (min-width: $desktop-width) {
+    width: 400px;
     padding-top: 47px;
-    padding-right: 52px;
+    padding-right: 62px;
     padding-bottom: 57px;
-    padding-left: 53px;
+    padding-left: 63px;
+  }
+}
+
+.reason-card--second {
+  @media (min-width: $tablet-width) {
+    grid-template-columns: 512px 256px;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-template-columns: 800px 400px;
+  }
+}
+
+.reason-card--second .reason-card__picture {
+  @media (min-width: $tablet-width) {
+    grid-column: 1/2;
+    grid-row: 1/2;
   }
 }
 
 .reason-card--second .reason-card__description {
   @media (min-width: $tablet-width) {
-    order: 2;
+    // order: 2;
+    grid-column: 2/3;
+    grid-row: 1/2;
+    padding-left: 36px;
+    padding-right: 36px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-left: 81px;
+    padding-right: 85px;
+  }
+}
+
+.reason-card--second .reason-card__title {
+  @media (min-width: $tablet-width) {
+    padding-left: 15px;
+    padding-right: 19px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-left: 44px;
+    padding-right: 40px;
+    padding-top: 4px;
   }
 }
 
 .reason-card--brief .reason-card__description {
   min-height: 167px;
-  padding-top: 25px;
+  padding-top: 42px;
   padding-bottom: 24px;
   background-color: $gray;
   color: $black;
-}
 
-.reason-card--brief .reason-card__inner {
   @media (min-width: $tablet-width) {
-    padding-left: 15px;
-    padding-right: 20px;
+    &:nth-child(1) {
+      padding-left: 33px;
+      padding-right: 34px;
+    }
+
+    &:nth-child(2) {
+      padding-left: 46px;
+      padding-right: 48px;
+    }
   }
 }
+
+
+// .reason-card--brief .reason-card__inner {
+//   @media (min-width: $tablet-width) {
+//     padding-left: 15px;
+//     padding-right: 20px;
+//   }
+// }
 
 .reason-card__title {
   margin: 0;
@@ -104,6 +164,15 @@
   line-height: 26px;
   text-align: center;
   text-transform: uppercase;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 14px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-left: 28px;
+    padding-right: 35px;
+  }
 }
 
 .reason-card__number {
@@ -112,6 +181,10 @@
 
   text-align: center;
   text-transform: uppercase;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 24px;
+  }
 }
 
 .reason-card__text {
@@ -119,6 +192,11 @@
 
   text-align: center;
   text-transform: uppercase;
+
+  @media (min-width: $tablet-width) {
+    font-size: 14px;
+    line-height: 21px;
+  }
 }
 
 .reason-card__img {
