--- a/source/sass/layout/page-footer.scss
+++ b/source/sass/layout/page-footer.scss
@@ -16,7 +16,7 @@
   @media (min-width: $tablet-width) {
     padding-left: 45px;
     padding-right: 60px;
-    padding-top: 38px;
+    padding-top: 33px;
     display: flex;
     justify-content: space-between;
     flex-direction: row;
@@ -38,6 +38,11 @@
   text-transform: uppercase;
   color: $black;
   text-align: center;
+
+  @media (min-width: $tablet-width) {
+    padding-top: 12px;
+    padding-left: 13px;
+  }
 }
 
 .page-footer__social {
