--- a/source/sass/layout/form.scss
+++ b/source/sass/layout/form.scss
@@ -157,7 +157,7 @@
       position: absolute;
       top: 51%;
       overflow: hidden;
-      width: 50%;
+      width: 100%;
       height: 1px;
       content: "\a0";
       background-color: $gray2;
@@ -167,6 +167,20 @@
       margin-left: -50%;
       text-align: right;
     }
+  }
+}
+
+.form__subtitle--special span {
+  @media (min-width: $tablet-width) {
+    position: relative;
+    z-index: 12;
+    background-color: $white;
+    display: inline-block;
+    padding: 0 30px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 0 50px;
   }
 }
 
