--- a/source/sass/components/reason-card.scss
+++ b/source/sass/components/reason-card.scss
@@ -69,12 +69,10 @@
     padding-right: 32px;
     padding-bottom: 44px;
     padding-left: 32px;
-    width: 256px;
     min-height: 256px;
   }
 
   @media (min-width: $desktop-width) {
-    width: 400px;
     padding-top: 47px;
     padding-right: 62px;
     padding-bottom: 57px;
@@ -127,34 +125,25 @@
   }
 }
 
-.reason-card--brief .reason-card__description {
-  min-height: 167px;
-  padding-top: 42px;
-  padding-bottom: 24px;
-  background-color: $gray;
-  color: $black;
+// .reason-card--brief .reason-card__description {
+//   min-height: 167px;
+//   padding-top: 42px;
+//   padding-bottom: 24px;
+//   background-color: $gray;
+//   color: $black;
 
-  @media (min-width: $tablet-width) {
-    &:nth-child(1) {
-      padding-left: 33px;
-      padding-right: 34px;
-    }
-
-    &:nth-child(2) {
-      padding-left: 46px;
-      padding-right: 48px;
-    }
-  }
-}
-
-
-// .reason-card--brief .reason-card__inner {
 //   @media (min-width: $tablet-width) {
-//     padding-left: 15px;
-//     padding-right: 20px;
+//     &:nth-child(1) {
+//       padding-left: 33px;
+//       padding-right: 34px;
+//     }
+
+//     &:nth-child(2) {
+//       padding-left: 46px;
+//       padding-right: 48px;
+//     }
 //   }
 // }
-
 .reason-card__title {
   margin: 0;
   margin-bottom: 20px;
@@ -174,6 +163,58 @@
     padding-right: 35px;
   }
 }
+
+.brief-reasons__item .reason-card__description {
+  background-color: $gray;
+  color: $black;
+
+  @media (min-width: $desktop-width) {
+    padding-top: 43px;
+  }
+}
+
+.brief-reasons__item--1 .reason-card__description {
+  @media (min-width: $desktop-width) {
+    padding-right: 60px;
+    padding-left: 55px;
+  }
+}
+
+.brief-reasons__item--1 .reason-card__title {
+  @media (min-width: $desktop-width) {
+    padding-left: 58px;
+    padding-right: 52px;
+  }
+}
+
+.brief-reasons__item--2 .reason-card__description {
+  @media (min-width: $desktop-width) {
+    padding-right: 65px;
+    padding-left: 62px;
+  }
+}
+
+.brief-reasons__item--2 .reason-card__title {
+  @media (min-width: $desktop-width) {
+    padding-left: 49px;
+    padding-right: 52px;
+  }
+}
+
+.brief-reasons__item--3 .reason-card__description {
+  @media (min-width: $desktop-width) {
+    padding-right: 60px;
+    padding-left: 57px;
+  }
+}
+
+.brief-reasons__item--3 .reason-card__title {
+  @media (min-width: $desktop-width) {
+    padding-left: 68px;
+    padding-right: 66px;
+  }
+}
+
 
 .reason-card__number {
   margin: 0;
