--- a/source/sass/components/promo.scss
+++ b/source/sass/components/promo.scss
@@ -90,6 +90,8 @@
   }
 
   @media (min-width: $desktop-width) {
+    width: 460px;
+    height: 350px;
     padding-top: 78px;
     padding-left: 370px;
     padding-right: 370px;
