pixel perfect for index

--- a/source/sass/global/global.scss
+++ b/source/sass/global/global.scss
@@ -43,3 +43,11 @@ textarea {
 *::after {
   box-sizing: border-box;
 }
+
+.small-hidden {
+  display: none;
+
+  @media (min-width: $tablet-width) {
+    display: inline-block;
+  }
+}
