--- a/source/sass/layout/page-footer.scss
+++ b/source/sass/layout/page-footer.scss
@@ -11,7 +11,7 @@
   @media (max-width: $mobile-width-only) {
     padding-left: 20px;
     padding-right: 20px;
-    padding-top: 28px;
+    padding-top: 36px;
 
     display: flex;
     flex-direction: column;
@@ -29,7 +29,7 @@
   @media (min-width: $desktop-width) {
     padding-left: 104px;
     padding-right: 120px;
-    padding-top: 36px;
+    padding-top: 33px;
   }
 }
 
@@ -50,7 +50,15 @@
 }
 
 .page-footer__social {
-  margin-bottom: 45px;
+  margin-bottom: 38px;
+
+  @media (min-width: $tablet-width) {
+    padding-left: 9px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-left: 7px;
+  }
 }
 
 .page-footer__copyright {
