--- a/source/sass/components/benefits.scss
+++ b/source/sass/components/benefits.scss
@@ -1,7 +1,7 @@
 .benefits {
   margin-left: 20px;
   margin-right: 20px;
-  padding-top: 30px;
+  padding-top: 20px;
 
   min-height: 416px;
   display: grid;
@@ -20,7 +20,6 @@
     text-align: center;
     padding-top: 111px;
     padding-left: 0;
-    // padding-bottom: 60px;
   }
 }
 
@@ -36,7 +35,7 @@
     background-repeat: no-repeat;
 
     @media (min-width: $tablet-width) {
-      top: 32px;
+      top: 40px;
       left: 69px;
       width: 75px;
       height: 75px;
@@ -45,7 +44,7 @@
 
     @media (min-width: $desktop-width) {
       left: 139px;
-      top: 29px;
+      top: 39px;
     }
   }
 
@@ -59,15 +58,15 @@
   &::before {
     content: "";
     position: absolute;
-    top: 5px;
-    left: 0;
+    top: -9px;
+    left: 5px;
     width: 40px;
     height: 38px;
     background-image: url("../img/icon-gift.svg");
     background-repeat: no-repeat;
 
     @media (min-width: $tablet-width) {
-      top: 29px;
+      top: 39px;
       left: 96px;
       width: 75px;
       height: 75px;
@@ -89,15 +88,15 @@
   &::before {
     content: "";
     position: absolute;
-    top: 5px;
-    left: 0;
+    top: -3px;
+    left: -2px;
     width: 40px;
     height: 38px;
     background-image: url("../img/icon-burger.svg");
     background-repeat: no-repeat;
 
     @media (min-width: $tablet-width) {
-      top: 31px;
+      top: 41px;
       left: 81px;
       width: 75px;
       height: 75px;
@@ -116,7 +115,8 @@
 }
 
 .benefits__title {
-  margin-bottom: 30px;
+  margin-top: 0;
+  margin-bottom: 15px;
 
   font-weight: 700;
   font-size: 18px;
@@ -139,6 +139,14 @@
 }
 
 .benefits__item--accommodation .benefits__title {
+  padding-top: 15px;
+
+  @media (min-width: $tablet-width) {
+    padding-top: 27px;
+    padding-left: 20px;
+    padding-right: 48px;
+  }
+
   @media (min-width: $desktop-width) {
     padding-left: 20px;
     padding-right: 48px;
@@ -146,13 +154,44 @@
 }
 
 .benefits__item--presents .benefits__title {
+  padding-top: 3px;
+
+  @media (min-width: $tablet-width) {
+    padding-top: 27px;
+    padding-left: 70px;
+    padding-right: 44px;
+  }
+
   @media (min-width: $desktop-width) {
     padding-left: 70px;
     padding-right: 44px;
   }
 }
 
+.benefits__item--food .benefits__title {
+  padding-top: 15px;
+
+  @media (min-width: $tablet-width) {
+    padding-top: 27px;
+    padding-left: 46px;
+    padding-right: 48px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-left: 45px;
+    padding-right: 48px;
+  }
+}
+
 .benefits__item--accommodation .benefits__text {
+  margin: 0;
+
+  @media (min-width: $tablet-width) {
+    padding-top: 2px;
+    padding-left: 28px;
+    padding-right: 29px;
+  }
+
   @media (min-width: $desktop-width) {
     padding-top: 2px;
     padding-left: 26px;
@@ -162,8 +201,8 @@
 
 .benefits__item--food .benefits__text {
   @media (min-width: $tablet-width) {
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 45px;
+    padding-right: 41px;
   }
 
   @media (min-width: $desktop-width) {
@@ -174,6 +213,8 @@
 }
 
 .benefits__item--presents .benefits__text {
+  margin: 0;
+
   @media (min-width: $tablet-width) {
     padding-left: 25px;
     padding-right: 25px;
