--- a/source/sass/components/copyright.scss
+++ b/source/sass/components/copyright.scss
@@ -1,14 +1,29 @@
 .copyright__text {
-  padding-right: 5px;
+  margin: 0;
+  padding-right: 13px;
+  padding-top: 5px;
 
   @media (min-width: $tablet-width) {
     padding-left: 10px;
     padding-right: 13px;
+    padding-top: 11px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-top: 11px;
   }
 }
 
 .copyright__link {
-  padding-top: 10px;
+  padding-top: 3px;
+
+  @media (min-width: $tablet-width) {
+    padding-top: 8px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-top: 8px;
+  }
 }
 
 .copyright__icon {
