--- a/source/sass/components/main-nav.scss
+++ b/source/sass/components/main-nav.scss
@@ -12,6 +12,7 @@
   left: 0;
   z-index: 3;
 
+  display: none;
 
   @media (min-width: $tablet-width) {
     background-color: $white;
@@ -159,8 +160,8 @@
   @include btn-reset;
 
   position: absolute;
-  top: 25px;
-  right: 17px;
+  top: 32px;
+  right: 10px;
 
   @media (min-width: $tablet-width) {
     display: none;
