--- a/source/sass/components/offers.scss
+++ b/source/sass/components/offers.scss
@@ -1,13 +1,14 @@
 .offers__inner {
   padding-right: 20px;
   padding-left: 20px;
-  padding-top: 33px;
+  padding-top: 31px;
   padding-bottom: 49px;
 
   @media (min-width: $tablet-width) {
     padding-right: 155px;
     padding-left: 155px;
     padding-bottom: 58px;
+    padding-top: 56px;
   }
 
   @media (min-width: $desktop-width) {
@@ -18,6 +19,8 @@
 }
 
 .offers__title {
+  margin: 0;
+  padding-bottom: 5px;
   font-weight: 700;
   font-size: 21px;
   line-height: 26px;
@@ -31,9 +34,8 @@
 }
 
 .offers__text {
-  padding-right: 10px;
-  padding-left: 10px;
-  margin-bottom: 27px;
+  margin-bottom: 34px;
+  padding-top: 5px;
 
 
   font-weight: 400;
@@ -48,13 +50,11 @@
     padding-left: 5px;
     padding-right: 5px;
     margin-bottom: 44px;
-    padding-top: 7px;
+    padding-top: 16px;
   }
 
   @media (min-width: $desktop-width) {
-    padding-left: 30px;
-    padding-right: 20px;
-    padding-top: 8px;
+    padding-top: 17px;
     margin-bottom: 48px;
   }
 }
