--- a/source/sass/components/promo.scss
+++ b/source/sass/components/promo.scss
@@ -19,7 +19,7 @@
     background-position: bottom center;
 
     @media (min-width: $tablet-width) {
-      top: 488px;
+      top: 461px;
     }
 
     @media (min-width: $desktop-width) {
@@ -39,8 +39,11 @@
 .promo__inner {
   position: relative;
   min-width: 320px;
-  min-height: 389px;
+  height: 389px;
   width: 100%;
+  padding-top: 90px;
+  padding-left: 20px;
+  padding-right: 20px;
   background-color: $blue-hover;
   background-image: url("../img/back-mobile.jpg");
   background-size: cover;
@@ -52,7 +55,10 @@
   }
 
   @media (min-width: $tablet-width) {
-    min-height: 518px;
+    height: 518px;
+    padding-top: 77px;
+    padding-left: 154px;
+    padding-right: 153px;
     background-image: url("../img/back-tablet.jpg");
     background-repeat: no-repeat;
 
@@ -63,7 +69,10 @@
   }
 
   @media (min-width: $desktop-width) {
-    min-height: 518px;
+    padding-top: 78px;
+    padding-left: 370px;
+    padding-right: 370px;
+    height: 518px;
     background-image: url("../img/back-desktop.jpg");
     background-repeat: no-repeat;
 
@@ -77,24 +86,15 @@
 
 .promo__img {
   width: 100%;
-  padding-top: 90px;
-  padding-left: 20px;
-  padding-right: 20px;
 
   @media (min-width: $tablet-width) {
     width: 461px;
     height: 350px;
-    padding-top: 50px;
-    padding-left: 60px;
-    padding-right: 60px;
   }
 
   @media (min-width: $desktop-width) {
     width: 460px;
     height: 350px;
-    padding-top: 78px;
-    padding-left: 370px;
-    padding-right: 370px;
   }
 }
 
@@ -116,7 +116,10 @@
 .promo__title {
   margin: 0;
   margin-top: 32px;
-  margin-bottom: 40px;
+  margin-bottom: 30px;
+
+  padding-right: 10px;
+  padding-left: 7px;
 
   font-weight: 700;
   font-size: 18px;
