--- a/source/sass/components/reason-card.scss
+++ b/source/sass/components/reason-card.scss
@@ -5,7 +5,7 @@
   grid-template: column;
 
   @media (min-width: $tablet-width) {
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 1fr 2fr;
   }
 
   @media (min-width: $desktop-width) {
@@ -15,7 +15,7 @@
 }
 
 .reason-card__description {
-  min-height: 211px;
+  min-height: 191px;
   padding-top: 55px;
   padding-right: 20px;
   padding-left: 20px;
@@ -39,13 +39,21 @@
   }
 }
 
+.reason-card--first .reason-card__description {
+  padding-top: 70px;
+
+  @media (min-width: $tablet-width) {
+    padding-top: 40px;
+  }
+}
+
 .reason-card--second {
   @media (min-width: $tablet-width) {
-    grid-template-columns: 512px 256px;
+    grid-template-columns: 2fr 1fr;
   }
 
   @media (min-width: $desktop-width) {
-    grid-template-columns: 800px 400px;
+    grid-template-columns: 2fr 1fr;
   }
 }
 
@@ -57,12 +65,15 @@
 }
 
 .reason-card--second .reason-card__description {
+  padding-top: 34px;
+
   @media (min-width: $tablet-width) {
     // order: 2;
     grid-column: 2/3;
     grid-row: 1/2;
     padding-left: 36px;
     padding-right: 36px;
+    padding-top: 40px;
   }
 
   @media (min-width: $desktop-width) {
@@ -86,16 +97,17 @@
 
 .reason-card__title {
   margin: 0;
-  margin-bottom: 20px;
+  margin-bottom: 13px;
 
   font-weight: 700;
-  font-size: 21px;
+  font-size: 18px;
   line-height: 26px;
   text-align: center;
   text-transform: uppercase;
 
   @media (min-width: $tablet-width) {
     margin-bottom: 14px;
+    font-size: 21px;
   }
 
   @media (min-width: $desktop-width) {
@@ -107,6 +119,12 @@
 .brief-reasons__item .reason-card__description {
   background-color: $gray;
   color: $black;
+  padding-top: 26px;
+  padding-bottom: 24px;
+
+  @media (min-width: $tablet-width) {
+    padding-top: 42px;
+  }
 
   @media (min-width: $desktop-width) {
     padding-top: 43px;
@@ -114,6 +132,11 @@
 }
 
 .brief-reasons__item--1 .reason-card__description {
+  @media (min-width: $tablet-width) {
+    padding-right: 33px;
+    padding-left: 34px;
+  }
+
   @media (min-width: $desktop-width) {
     padding-right: 60px;
     padding-left: 55px;
@@ -121,6 +144,12 @@
 }
 
 .brief-reasons__item--1 .reason-card__title {
+  @media (min-width: $tablet-width) {
+    padding-left: 8px;
+    padding-right: 10px;
+    padding-top: 2px;
+  }
+
   @media (min-width: $desktop-width) {
     padding-left: 58px;
     padding-right: 52px;
@@ -128,6 +157,14 @@
 }
 
 .brief-reasons__item--2 .reason-card__description {
+  padding-left: 41px;
+  padding-right: 42px;
+
+  @media (min-width: $tablet-width) {
+    padding-right: 47px;
+    padding-left: 47px;
+  }
+
   @media (min-width: $desktop-width) {
     padding-right: 65px;
     padding-left: 62px;
@@ -135,13 +172,34 @@
 }
 
 .brief-reasons__item--2 .reason-card__title {
+  @media (min-width: $tablet-width) {
+    padding-left: 8px;
+    padding-right: 10px;
+    padding-top: 2px;
+  }
+
   @media (min-width: $desktop-width) {
     padding-left: 49px;
     padding-right: 52px;
   }
 }
 
+.brief-reasons__item--2 .reason-card__text {
+  @media (min-width: $tablet-width) {
+    padding-left: 5px;
+    padding-right: 9px;
+  }
+}
+
 .brief-reasons__item--3 .reason-card__description {
+  padding-left: 23px;
+  padding-right: 22px;
+
+  @media (min-width: $tablet-width) {
+    padding-right: 41px;
+    padding-left: 40px;
+  }
+
   @media (min-width: $desktop-width) {
     padding-right: 60px;
     padding-left: 57px;
@@ -149,16 +207,26 @@
 }
 
 .brief-reasons__item--3 .reason-card__title {
+  @media (min-width: $tablet-width) {
+    padding-left: 11px;
+    padding-right: 10px;
+    padding-top: 2px;
+  }
+
   @media (min-width: $desktop-width) {
     padding-left: 68px;
     padding-right: 66px;
   }
 }
 
+.brief-reasons__item--3 .reason-card__text {
+  padding-left: 17px;
+  padding-right: 11px;
+}
 
 .reason-card__number {
   margin: 0;
-  margin-bottom: 20px;
+  margin-bottom: 19px;
 
   text-align: center;
   text-transform: uppercase;
@@ -170,6 +238,8 @@
 
 .reason-card__text {
   margin: 0;
+  font-size: 14px;
+  line-height: 21px;
 
   text-align: center;
   text-transform: uppercase;
