--- a/source/sass/utils/variables.scss
+++ b/source/sass/utils/variables.scss
@@ -24,6 +24,7 @@ $gray6: #e7e5e5;
 $gray7: #d5d5d5;
 $special-gray: #5c6870;
 
+$opacity-main-nav: rgba(0, 0, 0, 0);
 $black-opacity: rgba(1, 1, 1, 0.2);
 $black-opacity3: rgba(1, 1, 1, 0.3);
 $white-opacity: rgba(255, 255, 255, 0.2);
