--- a/source/sass/components/user-opinion.scss
+++ b/source/sass/components/user-opinion.scss
@@ -1,82 +1,32 @@
 .user-opinion {
   @media (min-width: $tablet-width) {
     border: none;
+    margin-bottom: 15px;
+  }
+}
+
+.user-opinion__list {
+  padding-top: 20px;
+
+  @media (min-width: $tablet-width) {
+    padding-top: 55px;
   }
 }
 
 .user-opinion__item {
   margin-bottom: 43px;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 52px;
+
+    &:last-child {
+      margin-bottom: 49px;
+    }
+  }
 }
 
-// .user-opinion__label {
-//   padding-left: 68px;
-
-//   font-weight: 700;
-//   font-size: 18px;
-//   line-height: 26px;
-
-//   color: $black;
-
-//   cursor: pointer;
-
-//   position: relative;
-
-//   &::before {
-//     content: "";
-//     position: absolute;
-//     top: -10px;
-//     left: 0;
-
-//     width: 48px;
-//     height: 48px;
-//     border-radius: 50%;
-
-//     background-color: $lightGray;
-//   }
-
-//   &::after {
-//     content: "";
-//     position: absolute;
-//     top: 4px;
-//     left: 15px;
-
-//     width: 18px;
-//     height: 18px;
-//     border-radius: 50%;
-
-//     background-color: $darkGray;
-//   }
-// }
-
-
-// .user-opinion__input + .user-opinion__label::before {
-//   content: "";
-//   position: absolute;
-//   top: -10px;
-//   left: 0;
-
-//   width: 48px;
-//   height: 48px;
-//   border-radius: 50%;
-
-//   background-color: $lightGray;
-// }
-
-// .user-opinion__input:checked + .user-opinion__label::after {
-//   content: "";
-//   position: absolute;
-//   top: 4px;
-//   left: 15px;
-
-//   width: 18px;
-//   height: 18px;
-//   border-radius: 50%;
-
-//   background-color: $darkGray;
-// }
-
 .user-opinion__label span {
-  padding-left: 68px;
+  padding-left: 75px;
 
   font-weight: 700;
   font-size: 18px;
@@ -91,11 +41,11 @@
   &::before {
     content: "";
     position: absolute;
-    top: -10px;
+    top: -15px;
     left: 0;
 
-    width: 48px;
-    height: 48px;
+    width: 53px;
+    height: 53px;
     border-radius: 50%;
 
     background-color: $lightGray;
@@ -113,11 +63,11 @@
 .user-opinion__input:checked + span::after {
   content: "";
   position: absolute;
-  top: 4px;
+  top: 1px;
   left: 15px;
 
-  width: 18px;
-  height: 18px;
+  width: 21px;
+  height: 21px;
   border-radius: 50%;
 
   background-color: $darkGray;
