--- a/source/sass/components/main-nav.scss
+++ b/source/sass/components/main-nav.scss
@@ -14,7 +14,7 @@
 
   background-color: $blue;
 
-  // display: none;
+  display: none;
 
   @media (min-width: $tablet-width) {
     background-color: $white;
@@ -70,7 +70,7 @@
 }
 
 .main-nav__item--1 {
-  box-shadow: 0 1px 0 0 $black-opacity, inset 0 2px 0 0 $white-opacity;
+  // box-shadow: 0 1px 0 0 $black-opacity, inset 0 2px 0 0 $white-opacity;
 
   @media (min-width: $tablet-width) {
     padding-left: 47px;
@@ -117,12 +117,12 @@
     content: "";
     width: 100%;
     height: 7px;
-    box-shadow: inset 0 -7px 0 0 $black-opacity;
+    background: $blue linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.2) 100%);
     position: absolute;
     bottom: 0;
     left: 0;
 
-    @media (min-width: tablet-width) {
+    @media (min-width: $tablet-width) {
       display: none;
     }
   }
@@ -212,6 +212,7 @@
 .main-nav--opend .main-nav__toggle {
   top: 10px;
   right: 0;
+  z-index: 100;
 
   &::before,
   &::after {
