--- a/source/sass/components/user-contacts.scss
+++ b/source/sass/components/user-contacts.scss
@@ -6,6 +6,8 @@
   @media (min-width: $desktop-width) {
     display: grid;
     grid-template-columns: 1fr 1fr;
+
+    padding-top: 43px;
   }
 }
 
@@ -20,17 +22,24 @@
 
 .user-contacts__label {
   margin-bottom: 8px;
+  padding-left: 20px;
   font-weight: 400;
   font-size: 14px;
   line-height: 26px;
 
   text-transform: uppercase;
   color: $darkGray;
+
+  @media (min-width: $desktop-width) {
+    padding-left: 0;
+    padding-right: 11px;
+  }
 }
 
 .user-contacts__input {
   width: 100%;
   height: 58px;
+  margin-top: 11px;
   padding-top: 18px;
   padding-bottom: 14px;
   padding-left: 21px;
@@ -55,7 +64,15 @@
   }
 
   @media (min-width: $desktop-width) {
-    width: 43%;
+    width: 54%;
+  }
+}
+
+.user-contacts__input--email {
+  margin-top: 5px;
+
+  @media (min-width: $desktop-width) {
+    margin-top: 11px;
   }
 }
 
@@ -72,7 +89,7 @@
   top: 26px;
 
   @media (min-width: $desktop-width) {
-    right: 55px;
+    right: 80px;
     top: 0;
   }
 }
@@ -81,6 +98,13 @@
   background-image: url("../img/icon-phone.svg");
   background-repeat: no-repeat;
   background-position: center;
+
+  top: 37px;
+
+  @media (min-width: $desktop-width) {
+    right: 80px;
+    top: 11px;
+  }
 }
 
 .user-contacts__icon--email {
@@ -88,8 +112,10 @@
   background-repeat: no-repeat;
   background-position: center;
 
+  top: 31px;
+
   @media (min-width: $desktop-width) {
-    right: 64px;
-    top: 0;
+    right: 0;
+    top: 10px;
   }
 }
