--- a/source/sass/layout/form.scss
+++ b/source/sass/layout/form.scss
@@ -10,6 +10,7 @@
   border: 0;
   padding: 0;
   position: relative;
+  margin-bottom: 7px;
 
   &::before {
     content: "";
@@ -17,7 +18,7 @@
     height: 1px;
     background-color: $gray5;
     position: absolute;
-    top: 0;
+    top: -5px;
     left: -22px;
 
     @media (min-width: $tablet-width) {
@@ -28,6 +29,11 @@
   @media (min-width: $tablet-width) {
     grid-column: 2 / 3;
     grid-row: 1 / 2;
+    padding-top: 24px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-top: 18px;
   }
 }
 
@@ -42,7 +48,7 @@
     height: 1px;
     background-color: $gray5;
     position: absolute;
-    top: 0;
+    top: -5px;
     left: -22px;
 
     @media (min-width: $tablet-width) {
@@ -60,6 +66,7 @@
   padding: 0;
   border: 0;
   position: relative;
+  padding-top: 19px;
 
   &::before {
     content: "";
@@ -67,17 +74,23 @@
     height: 1px;
     background-color: $gray5;
     position: absolute;
-    top: 0;
+    top: -5px;
     left: -22px;
 
     @media (min-width: $tablet-width) {
       display: none;
+      margin-top: 0;
     }
   }
 
   @media (min-width: $tablet-width) {
     grid-column: 1 / 2;
     grid-row: 1 / 2;
+    padding-top: 46px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-top: 17px;
   }
 }
 
@@ -104,6 +117,7 @@
   @media (min-width: $tablet-width) {
     grid-column: 1 / 3;
     grid-row: 3 / 4;
+    padding-top: 10px;
   }
 }
 
@@ -119,7 +133,7 @@
     height: 1px;
     background-color: $gray5;
     position: absolute;
-    top: 0;
+    top: -5px;
     left: -22px;
 
     @media (min-width: $tablet-width) {
@@ -130,10 +144,14 @@
   @media (min-width: $tablet-width) {
     grid-column: 1 / 3;
     grid-row: 4 / 5;
+
+    padding-top: 18px;
   }
 }
 
 .form__subtitle {
+  padding-top: 1px;
+
   font-weight: 700;
   font-size: 18px;
   line-height: 26px;
@@ -176,11 +194,49 @@
     z-index: 12;
     background-color: $white;
     display: inline-block;
-    padding: 0 30px;
+    padding: 1px 62px;
   }
 
   @media (min-width: $desktop-width) {
-    padding: 0 50px;
+    padding: 1px 50px;
+  }
+}
+
+.form__user-visited .form__subtitle--special span {
+  @media (min-width: $tablet-width) {
+    width: 308px;
+    padding: 0 20px;
+  }
+}
+
+.form__user-info .form__subtitle {
+  @media (min-width: $tablet-width) {
+    text-align: left;
+    padding-left: 55px;
+    padding-top: 21px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-top: 0;
+    padding-left: 78px;
+  }
+}
+
+.form__user-opinion .form__subtitle {
+  @media (min-width: $tablet-width) {
+    text-align: left;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-left: 80px;
+  }
+}
+
+.form__user-visited .form__subtitle {
+  @media (min-width: $tablet-width) {
+    text-align: center;
+    padding-left: 60px;
+    padding-right: 60px;
   }
 }
 
@@ -188,7 +244,7 @@
   width: 280px;
   height: 58px;
 
-  margin-bottom: 48px;
+  margin-bottom: 40px;
 
   @media (min-width: $tablet-width) {
     width: 324px;
