--- a/source/sass/utils/variables.scss
+++ b/source/sass/utils/variables.scss
@@ -23,6 +23,8 @@ $gray5: #e5e5e5;
 $gray6: #e7e5e5;
 $gray7: #d5d5d5;
 $special-gray: #5c6870;
+$gray-back: #f2f2f2;
+$white-back: rgba(0, 1, 1, 0.2);
 
 $opacity-main-nav: rgba(0, 0, 0, 0);
 $black-opacity: rgba(1, 1, 1, 0.2);
